--- a/src/styles/loginPage_cust.css
+++ b/src/styles/loginPage_cust.css
@@ -13,14 +13,15 @@
   max-width: 100%;
   height: auto;
   border-radius: 1rem;
-  /* box-shadow: 0rem 0.25rem 0.625rem rgba(0, 0, 0, 0.1); */
 }
 
 .customer_login {
   background: #fff;
   border-radius: 0.625rem;
   padding: 2.5rem;
-  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.1), -0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.1), 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.1), 
+              -0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.1), 
+              0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   text-align: center;
   width: 25rem;
   position: absolute;
@@ -28,8 +29,6 @@
   top: 50%;
   transform: translateY(-50%);
 }
-
-
 
 .logo_container {
   display: flex;
@@ -58,7 +57,22 @@
   padding: 2rem;
   border-radius: 0.5rem;
   background-color: #fff;
-  border-top: 0;
+}
+
+.login_selection {
+  margin-bottom: 1rem;
+  position: relative;
+}
+
+.login_selection select {
+  width: 100%;
+  padding:1rem;
+  /* padding: 0.8em 3rem 0.8em 2.5rem; */
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
+  
 }
 
 .form_heading {
@@ -99,7 +113,7 @@
 .password_toggle {
   position: absolute;
   right: 0.7rem;
-  top: 35%;
+  top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
   color: #999;
@@ -152,7 +166,7 @@
   color: #6b3eff;
   text-decoration: none;
   background: none;
-  border:none;
+  border: none;
   cursor: pointer;
 }
 
