--- a/src/styles/signUpPage.css
+++ b/src/styles/signUpPage.css
@@ -15,6 +15,19 @@
   margin-bottom: 0.5rem;
 }
 
+.password_container_register {
+  position: relative;
+}
+
+.password_toggle_register {
+  position: absolute;
+  right: 0.7rem;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #999;
+}
+
 .create_account p {
   font-size: 1rem;
   color: #555;
