--- a/src/styles/addProduct.css
+++ b/src/styles/addProduct.css
@@ -1,14 +1,17 @@
 .admin_container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 1.25rem;
-    background-color: #f9f9f9;
+    /* align-items: center; */
+    /* padding-top: 1.25rem; */
+    background-color: white;
     min-height: 100vh;
+    padding:0;
+  
   }
   
   .admin_cont1 {
     width: 100%;
+    height:100%;
     max-width: 31.25rem;
     background-color: #ffffff;
     border-radius: 0.5rem;
