--- a/src/styles/ProductPage.css
+++ b/src/styles/ProductPage.css
@@ -85,7 +85,6 @@
   object-fit: contain; 
 }
 
-
 .fetch_product_detail {
   padding: 1rem;
 }
@@ -162,4 +161,52 @@
   text-align: center;
   font-size: 1.2rem;
   color: #555;
+}
+
+@media (max-width: 768px) {
+  .product_card {
+    width: 100%; 
+    margin-bottom: 1rem; 
+  }
+
+  .product_images {
+    gap: 1rem;
+    padding: 0 1rem; 
+  }
+
+  .search-bar {
+    width: 90%;
+  }
+
+  .action-buttons {
+    flex-direction: column;
+    margin-left: 0;
+    gap: 10px;
+  }
+
+  .icon-button {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .search-bar {
+    width: 100%;
+  }
+
+  .product_card {
+    width: 100%;
+  }
+
+  .product_name {
+    font-size: 1rem;
+  }
+
+  .product_price {
+    font-size: 1rem;
+  }
+
+  .product_features li {
+    font-size: 0.8rem;
+  }
 }
